--- a/404.html
+++ b/404.html
@@ -54,7 +54,7 @@
           <ul class="nav-desctop-list">
             <li><a href="./index.html">Home</a></li>
             <li><a href="./about.html">About Me</a></li>
-            <li><a href="./portfolio.html">Projects</a></li>
+            <li><a href="project.html">Projects</a></li>
             <li><a href="Resume_Jason_Duan.pdf" target="_blank">Resume</a></li>
           </ul>
         </nav>
@@ -66,7 +66,7 @@
             <ul class="nav-mobile-list">
               <li><a href="./index.html">Home</a></li>
               <li><a href="./about.html">About Me</a></li>
-              <li><a href="./portfolio.html">Projects</a></li>
+              <li><a href="project.html">Projects</a></li>
               <li><a href="./Resume_Jason_Duan.pdf" target="_blank">Resume</a></li>
             </ul>
           </div>
@@ -103,12 +103,12 @@
               <ul class="nav-bottom ">
                 <li><a href="./index.html ">Home</a></li>
                 <li><a href="./about.html ">About</a></li>
-                <li><a href="./portfolio.html ">Projects</a></li>
+                <li><a href="project.html ">Projects</a></li>
                 <li><a href="Resume_Jason_Duan.pdf" target="_blank">Resume</a></li>
               </ul>
             </div>
             <div class="col-contacts col-base col-sm-6 col-md-3 footer-row2 ">
-              <a href="tel:14252836889" class="phone footer-last">+1 425 283 6889</a><br>
+              <a href="tel:14252836889" class="phone footer-last">+1 425-283-6889</a><br>
               <a href="mailto:duan_jason@outlool.com" class="email footer-last">duan_jason@outlook.com</a><br>
               <a href="https://www.google.com/maps/place/Stevens+Institute+of+Technology/@40.7448624,-74.0346548,15.66z" target="_blank " class="footer-last">Hoboken, NJ, 07030</a> <br/>
             </div>
