--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
 <body>
 
   <!-- Loader -->
-
   <div class="loader">
     <div class="spinner">
       <div class="double-bounce1"></div>
@@ -38,8 +37,7 @@
     </div>
   </div>
 
-  <!-- Navbar -->
-
+  <!-- Navigation -->
   <header class="navbar">
     <div>
       <a href="./index.html" class="brand js-target-scroll">
@@ -67,7 +65,7 @@
         <ul class="nav-desctop-list">
           <li class="active"><a href="./index.html">Home</a></li>
           <li><a href="./about.html">About Me</a></li>
-          <li><a href="./portfolio.html">Projects</a></li>
+          <li><a href="project.html">Projects</a></li>
           <li><a href="Resume_Jason_Duan.pdf" target="_blank">Resume</a></li>
         </ul>
       </nav>
@@ -79,7 +77,7 @@
           <ul class="nav-mobile-list">
             <li class="active"><a href="./index.html">Home</a></li>
             <li><a href="./about.html">About Me</a></li>
-            <li><a href="./portfolio.html">Projects</a></li>
+            <li><a href="project.html">Projects</a></li>
             <li><a href="./Resume_Jason_Duan.pdf" target="_blank">Resume</a></li>
           </ul>
         </div>
@@ -88,7 +86,6 @@
   </header>
 
   <!-- Home -->
-
   <main class="main main-full main-agency" data-stellar-background-ratio="0.7">
     <div class="container">
       <div class="opener">
@@ -110,7 +107,7 @@
 
   <div class="content">
 
-    <!-- About -->
+    <!-- About Me -->
     <section class="about section">
       <div class="container">
         <h2 class="section-title text-left text-dark wow fadeInLeft">I am a—<span class="fade-title">I am a</span></h2>
@@ -122,32 +119,32 @@
         <div class="row-about row">
           <div class="col-md-4 col-md-offset-3">
             <p style="font-size:1.1em; color:#4b4b4b;">I'm Jason, a master student studying Computer Science at the Stevens Institute of Technology.
-              My experience includes major responsibility of Linux programming and academic projects with server-side technology
+              My experience includes major responsibility of resolving work requirement and creating academic projects
               with up-to-date technologies and architectural implementation.
-              </p>
+            </p>
           </div>
           <div class="col-md-4">
-            <p style="font-size:1.1em; color:#4b4b4b;">As I take assorted courses at school and work in the industry, I find it most fascinating to tackle new
-              challenges by hacking my way through undiscovered fields and picking up new skills as I go.
-              And I have extraordinary fast learning ability and enthusiastic intention on novel techniques.  </p>
+            <p style="font-size:1.1em; color:#4b4b4b;">As I take assorted courses at school and work in the industry,
+              I find it most fascinating to tackle new challenges by hacking my way through
+              undiscovered fields and picking up new skills as I go.
+              And I have extraordinary fast learning ability and enthusiastic intention on novel techniques.
+            </p>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- Statisticts -->
+    <!-- Statistics -->
     <section class="statistics bg-dark section">
       <div class="container ">
         <div class="row ">
           <header class="text-center col-md-8 col-md-offset-2 ">
             <h2 class="dark-section-title " style="margin-bottom:2em; ">What I Do</h2>
-            <p class="section-lead ">In the UW iSchool, I learn not just how to code, but how to solve real-world problems by designing, architecting,
-              implementing, and optimizing technology.</p>
+            <p class="section-lead ">In the SIT, I learn not just how to code, but how to solve real-world problems by designing,
+              implementing, optimizing and reviewing code.</p>
             <p></p>
-            <p class="section-lead ">At the tech startup where I intern as a full-stack engineer, I play dynamic roles in the process of devising
-              technology-driven solutions for users
-              and experience working closely with business, clients,
-              other engineers, and stakeholders.</p>
+            <p class="section-lead ">As a software engineer. My mission is to fully utilize my expertise and passion for the IT industry,
+              by actively participating in designing and programming user-friendly applications while driving innovative technological solutions for businesses.</p>
             <p></p>
             <p class="section-lead ">In my spare time, I explore and try out new emerging technologies and exercise project management and collaboration
               skills to do side projects with friends and professors.</p>
@@ -200,12 +197,12 @@
             <ul class="nav-bottom ">
               <li><a href="./index.html ">Home</a></li>
               <li><a href="./about.html ">About</a></li>
-              <li><a href="./portfolio.html ">Projects</a></li>
+              <li><a href="project.html ">Projects</a></li>
               <li><a href="Resume_Jason_Duan.pdf" target="_blank">Resume</a></li>
             </ul>
           </div>
           <div class="col-contacts col-base col-sm-6 col-md-3 footer-row2 ">
-            <a href="tel:14252836889" class="phone footer-last">+1 425 283 6889</a><br>
+            <a href="tel:14252836889" class="phone footer-last">+1 425-283-6889</a><br>
             <a href="mailto:duan_jason@outlool.com" class="email footer-last">duan_jason@outlook.com</a><br>
             <a href="https://www.google.com/maps/place/Stevens+Institute+of+Technology/@40.7448624,-74.0346548,15.66z" target="_blank " class="footer-last">Hoboken, NJ, 07030</a> <br/>
           </div>
@@ -219,6 +216,7 @@
         </div>
       </div>
     </footer>
+
   </div>
 
   <!-- Modals -->
