--- a/portfolio-dataviz.html
+++ b/portfolio-dataviz.html
@@ -62,7 +62,7 @@
             <a href="./about.html">About Me</a>
           </li>
           <li>
-            <a href="./portfolio.html">Projects</a>
+            <a href="project.html">Projects</a>
           </li>
           <li><a href="photo.html">Photography</a></li>
           <li>
@@ -83,7 +83,7 @@
               <a href="./about.html">About Me</a>
             </li>
             <li>
-              <a href="./portfolio.html">Projects</a>
+              <a href="project.html">Projects</a>
             </li>
             <li><a href="./photo.html">Photography</a></li>
             <li>
@@ -147,7 +147,7 @@
           <div class="col-base col-sm-6 col-md-3 footer-row ">
             <ul class="nav-bottom ">
               <li><a href="./index.html ">Home</a></li>
-              <li><a href="./portfolio.html ">Projects</a></li>
+              <li><a href="project.html ">Projects</a></li>
               <li><a href="./about.html ">About</a></li>
               <li><a href="./photo.html ">Photography</a></li>
               <li><a href="Resume_Jason_Duan.pdf" target="_blank">Resume</a></li>
