--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -100,9 +100,9 @@
                   </ul>
                 </li>
                 <li>
-                  <a href="portfolio.html">Portfolio</a>
+                  <a href="project.html">Portfolio</a>
                   <ul>
-                    <li><a href="portfolio.html">Portfolio 1</a></li>
+                    <li><a href="project.html">Portfolio 1</a></li>
                     <li><a href="portfolio2.html">Portfolio 2</a></li>
                     <li><a href="portfolio3.html">Portfolio 3</a></li>
                     <li><a href="portfolio4.html">Portfolio 4</a></li>
@@ -198,7 +198,7 @@
                   <li>
                     <a href="#">Portfolio <i class="fa fa-angle-down"></i></a>
                     <ul>
-                      <li><a href="portfolio.html">Portfolio 1</a></li>
+                      <li><a href="project.html">Portfolio 1</a></li>
                       <li><a href="portfolio2.html">Portfolio 2</a></li>
                       <li><a href="portfolio3.html">Portfolio 3</a></li>
                       <li><a href="portfolio4.html">Portfolio 4</a></li>
